<resources>
    <string name="app_name">loginRegistro</string>
    <string-array name="fichas">
        <item>345545</item>
        <item>2617684</item>
    </string-array>

    <string-array name="competencias">
        <item>SST</item>
        <item>DEPORTE</item>
        <item>PROGRAMACION</item>
    </string-array>

    <string-array name="resultados">
        <item>El trabajo</item>
        <item>Actividad fisica</item>
        <item>programar</item>
    </string-array>

    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Michel Osorio</string>
    <string name="nav_header_subtitle">MichelOsorioBarrera@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuracion</string>

    <string name="menu_evento">Eventos</string>
    <string name="menu_disponibilidad">Disponibilidad de Ambiente</string>
    <string name="menu_progreso">Progreso</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_sesion">Cerrar Sesion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
