<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_evento"
        android:name="com.example.loginregistro.ui.home.HomeFragment"
        android:label="@string/menu_evento"
        tools:layout="@layout/fragment_eventos" />

    <fragment
        android:id="@+id/nav_disponibilidad"
        android:name="com.example.loginregistro.ui.gallery.GalleryFragment"
        android:label="@string/menu_disponibilidad"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_progreso"
        android:name="com.example.loginregistro.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_progreso"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.loginregistro.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_sesion"
        android:name="com.example.loginregistro.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_sesion"
        tools:layout="@layout/fragment_slideshow" />
</navigation>